flex-align of search fixed footer finished

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -49,7 +49,21 @@ table {
 
 
 /*start of custom css*/
+#whitespace-top {
+    display:flex;
+    flex-grow:1;
+}
 
+#whitespace-bottom{
+    display:flex;
+    flex-shrink:1;
+    flex:200px;
+}
+#dabigdiv {
+    display:flex;
+    flex-direction: column;
+    height:80%
+}
 
 #header-link-container {
     display:flex;
@@ -104,8 +118,7 @@ table {
     justify-content: center;
     align-content:flex-end;
     width:100%;
-    min-height:0px;
-    
+    flex-grow: 1 1 1;
 }
 
 #google-logo {
@@ -171,5 +184,35 @@ table {
 }
 
 #real-footer {
-    
+    position:fixed;
+    bottom:0px;
+    background-color:rgb(236, 236, 236);
+    width:100%;
+    height:90px;
+    color:rgb(100, 100, 100);
+    font-family: arial,sans-serif;
+}
+
+#Country-text {
+    padding:10px;
+}
+
+
+#footer-link-container {
+    display:flex;
+    justify-content: center;
+    border-top:2px solid rgb(201, 199, 199);
+}
+
+.footer-link {
+    margin-top:20px;
+    text-justify: auto;
+    text-decoration:none;
+    margin-left:10px;
+    margin-right:10;
+    color: rgb(100, 100, 100);
+}
+
+.footer-link:hover {
+    text-decoration-line: underline;
 }
